<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bryancapps.blackjack.GameActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="13"
        android:id="@+id/dealerView">

        <TextView
            android:id="@+id/dealerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dealer_text"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:id="@+id/dealerHand">

            <ImageView
                android:id="@+id/dealerFirstCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dealer_first_card_hint"
                android:src="@drawable/b2fv" />

            <ImageView
                android:id="@+id/dealerSecondCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/dealer_second_card_hint"
                android:src="@drawable/b2fv" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dealerScoreTextView"
            android:layout_alignTop="@+id/dealerHand"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="13"
        android:id="@+id/playerView">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/playerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/your_money"
                android:id="@+id/moneyTextView"
                android:gravity="right"
                android:layout_gravity="right"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:id="@+id/playerHand">

            <ImageView
                android:id="@+id/playerFirstCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/player_first_card_hint"
                android:src="@drawable/b2fv" />

            <ImageView
                android:id="@+id/playerSecondCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/player_second_card_hint"
                android:src="@drawable/b2fv" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerScoreTextView"
            android:layout_alignTop="@+id/playerHand"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:ellipsize="end" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="18"
        android:id="@+id/betDecisionView"
        android:visibility="visible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrement_bet"
            android:id="@+id/decrementBetButton"
            android:textSize="16sp"
            android:onClick="decrementBet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/betTextView"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/betTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black"
            android:text="@string/one_hundred_dollars"
            android:textSize="36sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment_bet"
            android:id="@+id/incrementBetButton"
            android:textSize="16sp"
            android:onClick="incrementBet"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/betTextView" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bet"
            android:id="@+id/betButton"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:onClick="onBet"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_below="@+id/decrementBetButton" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/hittingAndStayingView"
        tools:context="com.bryancapps.blackjack.GameActivity"
        android:visibility="gone">

        <Button
            android:id="@+id/stayButton"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:onClick="onStay"
            android:text="@string/stay"
            android:textSize="24sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/betAndLabel"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@id/betAndLabel"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/betLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/your_bet_label" />

            <TextView
                android:id="@+id/betTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/black"
                android:text="@string/one_hundred_dollars"
                android:textSize="36sp" />

        </LinearLayout>

        <Button
            android:id="@+id/hitButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onHit"
            android:text="@string/hit"
            android:textSize="24sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/betAndLabel" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="18"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="com.bryancapps.blackjack.GameActivity"
        android:id="@+id/playAgainView"
        android:visibility="gone">

        <TextView
            android:id="@+id/handOverTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="playAgain"
            android:text="@string/play_again" />
    </LinearLayout>

</LinearLayout>